# slam_web_viewer

./: .gitignore  README.md  install_jetson.sh  install_mac.sh  start_bridge.sh  start_twist_mux.sh  start_viz_stack.sh
bridge/: pyproject.toml
bridge/maps/: map_1781257676.qpc
bridge/src/robot_bridge/: __init__.py  mapacc.py  mjpeg.py  probe.py  protocol.py  replay.py  server.py
bridge/src/robot_bridge/mock/: __init__.py  __main__.py  camera.py  grid.py  scan.py  trajectory.py  world.py
bridge/src/robot_bridge/ros2/: __init__.py  __main__.py  audit_params.py  converters.py
bridge/tests/: gen_fixtures.py  test_converters.py  test_fixtures.py  test_grid_rle.py  test_mapacc.py  test_mock_smoke.py  test_protocol_roundtrip.py  test_qpc.py  test_rec.py  test_server_broadcast.py
bridge/tests/fixtures/: expected.json
config/: twist_mux.yaml
docs/: diagnostics.md  protocol.md
docs/superpowers/plans/: 2026-06-27-quest-vr-shared-codebase.md
docs/superpowers/specs/: 2026-06-14-slam-component-diagnostics-tabs-design.md  2026-06-27-quest-vr-shared-codebase-design.md
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/app/: App.tsx  Layout.tsx  layout.css
web/src/config/: expectedParams.ts
web/src/hooks/: useChannel.ts  useSendCommand.ts
web/src/lib/: mjpeg.ts  viewportRefs.ts
web/src/stores/: alertsStore.ts  bookmarksStore.ts  connectionStore.ts  depthFeed.ts  diagnosticsStore.ts  gridFeed.ts  imuFeed.ts  layersStore.ts  mapFeed.ts  missionStore.ts  navStore.ts  objectsStore.ts  paramsAuditStore.ts  pathFeed.ts  poseFeed.ts  recStore.ts  scanFeed.ts  scanLowFeed.ts  (+8 more)
(+64 files in other folders)
