[project]
name = "robot-bridge"
version = "0.1.0"
description = "WebSocket bridge + mock data generator for the robot GUI viewer"
requires-python = ">=3.11"
dependencies = [
    "websockets>=16.0",
    "msgpack>=1.1.2",
    "numpy>=2.0",
]

[project.optional-dependencies]
# rclpy is NOT pip-installable in a useful way — on the Jetson it comes from the
# sourced ROS2 Humble environment. This extra exists as documentation only.
ros2 = []
mjpeg = ["pillow>=10"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
