[project]
name = "robot-bridge"
version = "0.1.0"
description = "WebSocket bridge + mock data generator for the robot GUI viewer"
# 3.10 floor: Jetson Orin (JetPack 6 / Ubuntu 22.04) ships Python 3.10
requires-python = ">=3.10"
dependencies = [
    "websockets>=15.0",
    "msgpack>=1.0.5",
    "numpy>=1.21",
    "pillow>=9.0",
]

[project.optional-dependencies]
# rclpy is NOT pip-installable in a useful way — on the Jetson it comes from the
# sourced ROS2 Humble environment. This extra exists as documentation only.
ros2 = []
mjpeg = ["pillow>=10"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
